# Continual-Learning

./: .gitignore  3B_train.py  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  compare_all_1b.py  compare_all_1b_job.sh  debug_eval.py  debug_eval_job.sh  diagnose_casm_checkpoint.py  diagnose_contradiction_structure.py  evaluation_runner.py  main.py  metrics_logger.py  pretrain_period1.py  pretrain_period1_1b.py  pretrain_period1_1b_job.sh  pretrain_period1_job.sh  pyproject.toml  run_artifacts.py  run_eval.py  run_eval_job.sh  run_full_ft.py  run_full_ft_job.sh  run_job.sh  run_lora.py  run_lora_job.sh  run_smf.py  run_smf_job.sh  run_step2_all.py  run_step2_casm.py  run_step2_casm_1b.py  run_step2_casm_1b_job.sh  run_step2_casm_job.sh  run_step2_full_ft_1b.py  run_step2_full_ft_1b_job.sh  run_step2_fullft.py  run_step2_fullft_1b.py  run_step2_fullft_1b_job.sh  (+31 more)
.claude/: settings.local.json
EvalPipeline/: tgqa_eval_utils.py  tsqa_eval_utils.py  unified_eval_pipeline.ipynb
TGQA_dataset/: tgqa_1_explore.ipynb
TSQA_dataset/: tsqa_2_explore.ipynb
TemporalWikiDataset/: explore_temporal_wiki.ipynb
WikiFactDiffDataset/: download_wikifactdiff.py
artifacts/: __init__.py  checkpoint_manifest.py  checkpointing.py  run_artifacts.py
casf/: README.md  __init__.py  dataset.py
casf_dataset_api/: __init__.py  casf_types.py  contradiction.py  evaluator.py  memory.py  synthetic_dataset.py  verbalizer.py
checkpoints/: llama1b_augmented_dataset_full_ft_04_14_config.json
data/: build_augmentation_prompts.py  build_passages.py  build_probes.py  generate_synthetic.py  probes.json  (+3 more)
(+114 files in other folders)
